syntax = "proto3";

option go_package = "finnbank/common/grpc/products";

service ProductService {
    rpc GetAllProducts(GetAllProductsRequest) returns (GetProductResponse) {}
    rpc GetByIdProduct(ProductByIdRequest) returns (GetSingleProductResponse) {}
    rpc CreateProduct(CreateProductRequest) returns (GetSingleProductResponse) {}
    rpc UpdateProduct(ProductByIdRequest) returns (GetSingleProductResponse) {}
    rpc DeleteProduct(ProductByIdRequest) returns (GetSingleProductResponse) {}
}

message Product {
    int64 ID = 1;
    string Name = 2;
    string Info = 3;
    float Price = 4;
}

message ProductByIdRequest {
    int64 ID = 1;
}


message CreateProductRequest {
    string Name = 1;
    string Info = 2;
    float Price = 3;
}

message GetAllProductsRequest {
    string message = 1;
}

message GetProductResponse {
    repeated Product product = 1;
}

message GetSingleProductResponse {
    Product product = 1;
}